--- a/curiousharry.html
+++ b/curiousharry.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first proect</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>My bookmak</h1>
     <a href="https://chatgpt.com/" target="_blank"><h2>chatgpt</h2></a>
+    <a href="http://facebook.com" target="_ _blank">open facebook</a>
+    <a href="https://pranjalpandey.space/" target="_blank">Bro website</a>
     <img  height="269" src="gojo .png" alt="gojo image">
     <ul>
         <li>gojo</li>
@@ -31,6 +34,9 @@
         </tr>
     </table>
     <div>
+        <article>
+   <p>this is my first learning project</p>
+   </article>
     <form action="post"></form>
     <input type="text" name="username" class="username" placeholder="enter the name " id="username">
     <label for="username">Enter the name bro</label>
