--- a/curiousharry.html
+++ b/curiousharry.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first proect</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Baloo+Paaji+2:wght@400..800&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>My bookmak</h1>
+    <h1>My bookmark</h1>
     <a href="https://chatgpt.com/" target="_blank"><h2>chatgpt</h2></a>
     <a href="http://facebook.com" target="_ _blank">open facebook</a>
     <a href="https://pranjalpandey.space/" target="_blank">Bro website</a>
@@ -41,12 +44,32 @@
     <input type="text" name="username" class="username" placeholder="enter the name " id="username">
     <label for="username">Enter the name bro</label>
     </div>
+    <label for ="pass">password</label>
+    <input type="password" id="pass" name="pass">
+    <label for="email">email</label>
+    <input type="email" id="enmail" name="email name ">
+    <label for="phone">enter the phoneno</label>
+    <input type="phone no" id="phone no" placeholder="123344">
+<label  for="payment">payment</label>
+<select type="payment" id="payment">
+    <option>visa</option>
+    <option>mastercard</option>
+    <option>giftcard</option>
+</select>
+<label for="subscribe">subscribe</label>
+<input type="checkbox" id="subscribe">
     <div>
     <input type="radio" name="gender" placeholder="male " id="male">
     <label for="Male">Male</label>
  </div>
  <input type="radio" name="gender" placeholder="Female " id="male">
-    <label for="Female">Female</label>
+ <label for="Female">Female</label>
+  <div>
+        <input type="reset">
+     </div>
+     <div>
+        <input type="submit">
+    </div>   
     <video src="18196203-uhd_3840_2160_24fps.mp4" controls height="225"></video>
     <audio src="Voicy_I Am Pleased With The Result!.mp3" controls muted></audio>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/lhELGQAV4gg?si=ONaVbx5ZX5F8pbPX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
