--- a/curiousharry.html
+++ b/curiousharry.html
@@ -10,6 +10,13 @@
 <link href="https://fonts.googleapis.com/css2?family=Baloo+Paaji+2:wght@400..800&display=swap" rel="stylesheet">
 </head>
 <body>
+    <nav>
+        <ul>
+            <li>HOME</li>
+            <li>ABOUT</li>
+            <li>CONTACT</li>
+        </ul>
+    </nav>
     <h1>My bookmark</h1>
     <a href="https://chatgpt.com/" target="_blank"><h2>chatgpt</h2></a>
     <a href="http://facebook.com" target="_ _blank">open facebook</a>
@@ -67,19 +74,27 @@
   <div>
         <input type="reset">
      </div>
-     <br>
+     
      <div>
         <input type="submit">
+
+        <br>
+
     </div> 
     <div id="Krishna">
         Krishna is good boy
     </div>
+
+    <br>
+
     <div class="red">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident, possimus? Tempora omnis incidunt sit earum voluptatum, eius dolorum et ipsam voluptates cum. Magnam libero inventore omnis dolorem, laboriosam blanditiis nisi?
     </div>
     <video src="18196203-uhd_3840_2160_24fps.mp4" controls height="225"></video>
     <audio src="Voicy_I Am Pleased With The Result!.mp3" controls muted></audio>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/lhELGQAV4gg?si=ONaVbx5ZX5F8pbPX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    
+    <div class="hot">
+        today i am learning about inline block which make div block in to inline block by using only inline 
+    </div>
  </body>
 </html>
