--- a/curiousharry.html
+++ b/curiousharry.html
@@ -17,15 +17,25 @@
             <li>CONTACT</li>
         </ul>
     </nav>
+    
+        <h1>Welcome to my website</h1>
+        <div class="banner">
     <h1>My bookmark</h1>
-    <a href="https://chatgpt.com/" target="_blank"><h2>chatgpt</h2></a>
-    <a href="http://facebook.com" target="_ _blank">open facebook</a>
-    <a href="https://pranjalpandey.space/" target="_blank">Bro website</a>
+    <div class="container">
+    <a class="chatgpt" href="https://chatgpt.com/" target="_blank"><h2>chatgpt</h2></a>
+    <a class="facebook" href="http://facebook.com" target="_ _blank">open facebook</a>
+    <br>
+    <div>
+    <a class="pranjalpandey" href="https://pranjalpandey.space/" target="_blank">Bro website</a>
+    </div>
+    </div>
     <img  height="269" src="gojo .png" alt="gojo image">
     <ul>
-        <li>gojo</li>
-        <li>toji</li>
-        <li>moco</li>
+        <li>
+            <h2>GOJO</h2>
+        </li>
+        <li><h2>TOJI</h2></li>
+        <li><h2>MOCO</h2></li>
     </ul>
     <ol type="A">
         <li>GOJO</li>
@@ -81,6 +91,7 @@
         <br>
 
     </div> 
+    </div>
     <div id="Krishna">
         Krishna is good boy now he is learning web devlelopment but he is very curious to learn new things in web dev but after that he wanted to learn dsa because dsa is very important for his futurtre project and getting a good job in decent company
     </div>
@@ -96,12 +107,11 @@
     <div class="hot">
         today i am learning about inline block which make div block in to inline block by using only inline 
     </div>
-    <div class="bade papa">
-    <div class="box  box1">
+    <div class="banner">
+        
     </div>
-    <div class="box box2"></div>
-    <div class="box box3"></div>
-    <div class="box box4box4"></div>
-</div>
+<div class="box"></div>
+<div class="box"></div>
+<div class="box"></div>
  </body>
 </html>
